--- a/src/main.css
+++ b/src/main.css
@@ -73,6 +73,7 @@ li.hamberger {
 #renderArea {
     margin: 0rem 2rem 0 2rem;
 }
+
 .displayhide {
     display: none!important;
 }
@@ -114,9 +115,11 @@ li.hamberger {
     border-radius: 2rem;
             transition: all .3s;
 }
+
 .switch__input {
     display: none;
 }
+
 .switch__circle {
     display: block;
     top: 0.1rem;
@@ -129,9 +132,11 @@ li.hamberger {
     background-color: #fff;
             transition: all .3s;
 }
+
 .switch__input:checked ~ .switch__circle {
     left: 2.20rem;
 }
+
 .switch__input:checked ~ .switch__content:after {
     background-color: #88bf71;
     top: 0;
@@ -139,9 +144,29 @@ li.hamberger {
     width: 100%;
     height: 100%;
 }
+
 .flex {
     display: flex;
 }
 .padding-medium {
     padding: 0 0.5rem;
+}
+#Picture_in_Picture {
+    margin: 0 3rem 3rem ;
+}
+#Picture_in_Picture_video {
+    max-width: 100%;
+    max-height: 100%;
+}
+#Picture_in_Picture_start,#Picture_in_Picture_stop {
+    font-size: 1.5rem;
+    padding: 0.5rem 3rem;
+    border: 0;
+    border-radius: 5rem;
+}
+#Picture_in_Picture_start {
+    background-color: #88bf71;
+}
+#Picture_in_Picture_stop {
+    background-color: #EB6440;
 }
