--- a/src/jkanban/jkanban.css
+++ b/src/jkanban/jkanban.css
@@ -1,7 +1,26 @@
+#kanban_savebutton {
+  border:0.2rem solid var(--third-color);
+  background-color: var(--navibar-color);
+  border-radius: 50%;
+  padding: 0.7rem;
+  width: 2rem;
+  height: 2rem;
+}
+.kanban_add {
+  display: flex;
+  flex-direction: column;
+}
+.kanban_add_textarea {
+  font-size: 1rem;
+  font-family: 'Noto Sans JP', sans-serif;
+}
+/*-------------*/
 .kanban-container {
   position: relative;
   box-sizing: border-box;
-  width: auto;
+  width: auto!important;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
 }
 
 .kanban-container * {
@@ -10,12 +29,13 @@
 
 .kanban-container:after {
   clear: both;
-  display: block;
+  display: none;
   content: "";
 }
 
 .kanban-board {
   position: relative;
+  width: auto!important;
   float: left;
   background: #e2e4e6;
   transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1);
@@ -35,8 +55,13 @@
 }
 
 .kanban-board header {
-  font-size: 16px;
-  padding: 15px;
+  display: flex;
+  font-size: 1.2rem;
+  padding: 0.9rem;
+  justify-content: space-between;
+  border-bottom: 0.1rem solid ;
+  padding: 0.5rem 0;
+  margin: 0 0.5rem;
 }
 
 .kanban-board header .kanban-title-board {
@@ -63,8 +88,9 @@
 
 .kanban-item {
   background: #fff;
-  padding: 15px;
-  margin-bottom: 20px;
+  padding: 1rem;
+  border-radius: 2rem;
+  margin-bottom: 1rem;
   transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1);
 }
 
@@ -107,12 +133,12 @@
 .drag_handler {
     background: #fff;
     border-radius: 50%;
-    width: 24px;
-    height: 24px;
+    width: 1.5rem;
+    height: 1.5rem;
     position: relative;
     float: left;
     top: -3px;
-    margin-right: 4px;
+    margin-right: 0.5rem;
 }
 
 .drag_handler:hover {
@@ -123,7 +149,7 @@
     position: relative;
     display: block;
     background: #000;
-    width: 24px;
+    width: 1.5rem;
     height: 2px;
     top: 12px;
     transition: .5s ease-in-out;
