--- a/src/calendar/calendar.css
+++ b/src/calendar/calendar.css
@@ -23,7 +23,7 @@
   z-index: 99;
   background-color: var(--navibar-color);
   transition: 0.3s all ease;
-  font-size: 1.15rem;
+  font-size: 1rem;
 }
 
 .mainArea_to_task_edit_sidebar_Visible {
@@ -35,14 +35,29 @@
 }
 
 #taskEdit_close {
+
+  /*border-bottom: 0.2rem solid var(--third-color);*/
+  user-select: none;
+  position: absolute;
+}
+.taskEdit_close_inside {
+  position: relative;
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  padding: 1rem 1rem 1rem 0;
-  /*border-bottom: 0.2rem solid var(--third-color);*/
-  user-select: none;
+  bottom:1rem;
+  background-color: var(--navibar-color);
+  border-radius: 50%;
+  border: 0.2rem solid rgb(24, 93, 86);
+  transition: 0.3s ease;
+  rotate: 180deg;
+  right: 3.5rem;
 }
 
+.taskEdit_close_inside_openState {
+  rotate: 0deg !important;
+  right: 2rem !important;
+}
 .taskAddControlArea {
   display: flex;
   user-select: none;
@@ -59,8 +74,14 @@
   border-radius: 0.5rem;
   background-color: #DBE8AE;
   box-shadow: 0px 0.2rem 0.2rem 0px rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
 }
-
+#task_add_addButton:hover {
+  background-color: #c4cf9b;
+}
+#task_add_addButton:active {
+  background-color: #a8b185;
+}
 #task_add_editButton {
   display: flex;
   cursor: pointer;
@@ -71,7 +92,12 @@
   background-color: #D9C1E6;
   box-shadow: 0px 0.2rem 0.2rem 0px rgba(0, 0, 0, 0.2);
 }
-
+#task_add_editButton:hover {
+  background-color: #bfabca;
+}
+#task_add_editButton:active {
+  background-color: #a492ae;
+}
 #task_add_deleteButton {
   display: flex;
   cursor: pointer;
@@ -83,18 +109,23 @@
   background-color: #E6B391;
   box-shadow: 0px 0.2rem 0.2rem 0px rgba(0, 0, 0, 0.2);
 }
-
+#task_add_deleteButton:hover {
+  background-color: #cea183;
+}
+#task_add_deleteButton:active {
+  background-color: #b99075;
+}
 .taskDateInputArea {
   display: flex;
   justify-content: space-around;
 }
 
 #task_edit_sidebar .taskDateInput {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
 }
 
 #task_edit_sidebar .taskTimeInput {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
 }
 
 #textEdit_ID,
@@ -179,7 +210,7 @@
   font-family: 'Noto Sans JP', sans-serif;
   font-size: 1.1rem;
   width: 100%;
-  resize: none;
+  resize: vertical;
 }
 .folderLinkArea {
   display: flex;
@@ -204,4 +235,30 @@
 }
 .transparent_border {
   border-color: transparent!important;
+}
+#external-events {
+  margin: 0.8rem 0;
+}
+.task_add_OptionControl_Color_sampleArea{
+  display: flex;
+  margin: 0.5rem 0 ;
+  height: 2rem;
+}
+.task_add_Option_sample {
+  border: 0.15rem solid white;
+  background-color: black;
+  width: 1.5rem;
+  height: 1.5rem;
+  border-radius: 50%;
+  margin-right: 1rem;
+  transition: 0.2s ease;
+  position: relative;
+}
+.task_add_Option_sample:hover {
+  width: 2rem;
+  height: 2rem;
+  margin-right: 0rem;
+}
+.task_add_Option_sample:active {
+  border-color: white !important;
 }
