--- a/src/main.css
+++ b/src/main.css
@@ -24,10 +24,10 @@ body {
     transition: 0.05s ease;
     border-radius: 25%;
 }
-.hambergerPosition:hover {
+.navi-button:hover {
     background-color: #e7e5a6;
 }
-.hambergerPosition:active {
+.navi-button:active {
     background-color: #ebd891;
 }
 .naviArea {
@@ -62,6 +62,7 @@ li.navi-button {
     padding: 0.15rem 0rem 0.15rem 1rem;
     border-top: 0.3rem solid transparent;
     border-bottom: 0.3rem solid transparent;
+    border-radius: 0 1rem 1rem 0;
 }
 
 li.hamberger {
