--- a/src/calendar/calendar.css
+++ b/src/calendar/calendar.css
@@ -122,10 +122,12 @@
 
 #task_edit_sidebar .taskDateInput {
   font-size: 1.3rem;
+  font-family: 'Noto Sans JP', sans-serif;
 }
 
 #task_edit_sidebar .taskTimeInput {
   font-size: 1.3rem;
+  font-family: 'Noto Sans JP', sans-serif;
 }
 
 #textEdit_ID,
@@ -243,14 +245,16 @@
   display: flex;
   margin: 0.5rem 0 ;
   height: 2rem;
+  justify-content: space-between;
+  user-select: none;
 }
 .task_add_Option_sample {
   border: 0.15rem solid white;
   background-color: black;
+  cursor: pointer;
   width: 1.5rem;
   height: 1.5rem;
   border-radius: 50%;
-  margin-right: 1rem;
   transition: 0.2s ease;
   position: relative;
 }
@@ -261,4 +265,22 @@
 }
 .task_add_Option_sample:active {
   border-color: white !important;
+}
+.task_addOptionArea_Style {
+  width: 5.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.5rem;
+  padding: 0.2rem 0;
+  border: 0.1rem solid #b7c3c4;
+  box-shadow: 0px 0.2rem 0.2rem 0px rgb(0 0 0 / 20%);
+  transition: 0.1s ease-in;
+  cursor: pointer;
+}
+.task_addOptionArea_Style_select {
+  background-color: #DFE6CA;
+}
+.task_addOptionArea_Style:hover {
+  background-color: #b7c3c4;
 }
