--- a/src/main.css
+++ b/src/main.css
@@ -197,5 +197,5 @@ li.hamberger {
 /*---------------------------**/
 video {
     max-width: 100%;
-    max-height: 100%;
+    max-height: calc(100vh - 5rem);
 }
