--- a/src/calendar/calendar.css
+++ b/src/calendar/calendar.css
@@ -40,16 +40,17 @@
   user-select: none;
   position: absolute;
 }
+
 .taskEdit_close_inside {
   position: relative;
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  bottom:1rem;
+  top:-1.8rem;
   background-color: var(--navibar-color);
   border-radius: 50%;
   border: 0.2rem solid rgb(24, 93, 86);
-  transition: 0.3s ease;
+  transition: 0.3s;
   rotate: 180deg;
   right: 3.5rem;
 }
@@ -57,7 +58,9 @@
 .taskEdit_close_inside_openState {
   rotate: 0deg !important;
   right: 2rem !important;
+  top:-1.8rem;
 }
+
 .taskAddControlArea {
   display: flex;
   user-select: none;
@@ -76,12 +79,15 @@
   box-shadow: 0px 0.2rem 0.2rem 0px rgba(0, 0, 0, 0.2);
   transition: 0.3s;
 }
+
 #task_add_addButton:hover {
   background-color: #c4cf9b;
 }
+
 #task_add_addButton:active {
   background-color: #a8b185;
 }
+
 #task_add_editButton {
   display: flex;
   cursor: pointer;
@@ -92,12 +98,15 @@
   background-color: #D9C1E6;
   box-shadow: 0px 0.2rem 0.2rem 0px rgba(0, 0, 0, 0.2);
 }
+
 #task_add_editButton:hover {
   background-color: #bfabca;
 }
+
 #task_add_editButton:active {
   background-color: #a492ae;
 }
+
 #task_add_deleteButton {
   display: flex;
   cursor: pointer;
@@ -109,12 +118,15 @@
   background-color: #E6B391;
   box-shadow: 0px 0.2rem 0.2rem 0px rgba(0, 0, 0, 0.2);
 }
+
 #task_add_deleteButton:hover {
   background-color: #cea183;
 }
+
 #task_add_deleteButton:active {
   background-color: #b99075;
 }
+
 .taskDateInputArea {
   display: flex;
   justify-content: space-around;
@@ -160,42 +172,50 @@
   margin: 0.5rem 0;
   align-items: center;
 }
+
 #task_add_OptionControl {
   display: flex;
   align-items: center;
   user-select: none;
 }
+
 .task_add_Option {
   height: 0;
   overflow: hidden;
 }
+
 .task_add_Option_Visible {
-  height: max-content!important;
+  height: max-content !important;
 }
+
 .task_addOptionArea {
   display: flex;
   flex-direction: column;
   transition: all 0.3s ease;
   overflow: hidden;
 }
+
 .task_add_colorArea {
   display: grid;
   grid-template-columns: 5rem auto;
   align-items: center;
   justify-items: center;
 }
+
 .task_add_colorsync_a {
   position: absolute;
   user-select: none;
 }
+
 .task_add_colorsync_r {
   position: relative;
   display: flex;
   align-items: center;
   bottom: 5.2rem;
-  left :15rem
+  left: 15rem
 }
-#task_add_colorsync_chain{
+
+#task_add_colorsync_chain {
   display: block;
   width: 0.5rem;
   height: 2rem;
@@ -203,51 +223,86 @@
   border-top: 0.15rem solid;
   border-bottom: 0.15rem solid;
 }
-#task_add_eventColor, #task_add_backgroundColor,
-#task_add_borderColor, #task_add_textColor {
+
+#task_add_eventColor,
+#task_add_backgroundColor,
+#task_add_borderColor,
+#task_add_textColor {
   width: 50%;
   margin: 0.2rem 0;
 }
+
 #task_add_Description {
   font-family: 'Noto Sans JP', sans-serif;
   font-size: 1.1rem;
   width: 100%;
   resize: vertical;
 }
+
 .folderLinkArea {
   display: flex;
   align-items: center;
 }
+
 #folderLink_Open {
   margin-bottom: 1rem;
 }
+
 #folderLink_Message {
   display: flex;
   align-items: center;
 }
+
 .folderLink_Open_item {
   color: red;
 }
-.fc-day-sun ,.fc-day-sat{
+
+.fc-day-sun,
+.fc-day-sat {
   width: 5rem;
 }
+
 .red_color {
   color: red;
   border-color: red;
 }
+
 .transparent_border {
-  border-color: transparent!important;
+  border-color: transparent !important;
 }
+
 #external-events {
   margin: 0.8rem 0;
-}
-.task_add_OptionControl_Color_sampleArea{
   display: flex;
-  margin: 0.5rem 0 ;
+  justify-content: space-between;
+  align-items: center;
+}
+#external-events-list {
+  width: 100%;
+  margin-right: 0.5rem;
+}
+
+#task_add_EditLockButton {
+  padding: 0.2rem;
+  user-select: none;
+  border-radius: 0.5rem;
+  transition: 0.3s ease;
+  cursor: pointer;
+  border: 0.1rem solid #b7c3c4;
+  box-shadow: 0px 0.2rem 0.2rem 0px rgb(0 0 0 / 20%);
+}
+#task_add_EditLockButton:hover {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.task_add_OptionControl_Color_sampleArea {
+  display: flex;
+  margin: 0.5rem 0;
   height: 2rem;
   justify-content: space-between;
   user-select: none;
 }
+
 .task_add_Option_sample {
   border: 0.15rem solid white;
   background-color: black;
@@ -258,14 +313,17 @@
   transition: 0.2s ease;
   position: relative;
 }
+
 .task_add_Option_sample:hover {
   width: 2rem;
   height: 2rem;
   margin-right: 0rem;
 }
+
 .task_add_Option_sample:active {
   border-color: white !important;
 }
+
 .task_addOptionArea_Style {
   width: 5.5rem;
   display: flex;
@@ -278,9 +336,129 @@
   transition: 0.1s ease-in;
   cursor: pointer;
 }
-.task_addOptionArea_Style_select {
-  background-color: #DFE6CA;
+
+.task_addOptionArea_Style_select, #task_add_EditLock:checked + label{
+  background-color: var(--select-color);
 }
-.task_addOptionArea_Style:hover {
+
+.task_addOptionArea_Style:hover ,.task_add_titleIcon:hover{
   background-color: #b7c3c4;
+}
+
+#task_add_URLOpen {
+  cursor: pointer;
+  transition: 0.1s ease-in;
+  border-radius: 0.5rem;
+  padding: 0.2rem 0;
+  border: 0.1rem solid #b7c3c4;
+  box-shadow: 0px 0.2rem 0.2rem 0px rgb(0 0 0 / 20%);
+  width: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  user-select: none;
+}
+
+#task_add_URLOpen:hover {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+#task_add_URL {
+  width: calc(100% - 3rem);
+  margin-right: 1rem;
+  margin-top:0.5rem
+}
+
+.material_icon_open_in_new::before {
+  font-size: 1em;
+  height: 100%;
+  content: 'search';
+  font-family: 'Material Symbols Outlined';
+  display: flex;
+  background-color: white;
+  justify-content: center;
+}
+
+.task_add_titleIcon {
+  cursor: pointer;
+  transition: 0.1s ease-in;
+  user-select: none;
+  border-radius: 0.5rem;
+  padding: 0.2rem 0;
+  border: 0.1rem solid #b7c3c4;
+  box-shadow: 0px 0.2rem 0.2rem 0px rgb(0 0 0 / 20%);
+  width: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#task_add_titleIcon_Open {
+  user-select: none;
+}
+
+.task_add_titleIconArea {
+  justify-content: space-between;
+  margin: 0 0 0.5rem 0;
+}
+
+#task_add_TitleIconTextSample {
+  padding: 0.3rem;
+  user-select: none;
+}
+
+#task_add_TitleIconText {
+  width: 100%;
+  margin-right: 1rem;
+
+}
+
+.task_add_titleIconArea_Additional{
+  padding: 0.3rem 0;
+}
+
+.fc_titleIcon {
+  padding-right: 0.2rem;
+  font-size: 1.2rem;
+}
+
+.fc-daygrid-block-event .fc-event-time,
+ .fc-daygrid-block-event .fc-event-title ,
+ .fc-daygrid-dot-event .fc-event-title ,
+ .fc-v-event .fc-event-title, .fc-event-main{
+  display: flex;
+  align-items: center;
+}
+
+#drag_add_object {
+  font-size: 1.2rem;
+}
+
+.fc-myCustomButton-button {
+  transition: 0.1s ease;
+  background-color: rgb(152, 37, 37) !important;
+}
+
+.fc-myCustomButton-button_linked {
+  transition: 0.1s ease;
+  background-color: rgb(5, 99, 5) !important;
+}
+.fc-myCustomButton-button_linked:hover{
+  background-color: rgb(0, 79, 0) !important;
+}
+.fc-myCustomButton-button_linked::before {
+  font-family: 'Material Symbols Outlined';
+  content:"check";
+  padding-right:0.2rem;
+}
+.fc-myCustomButton-button:hover {
+  background-color: rgb(132, 17, 17) !important;
+}
+.no-link-background {
+  background-color: rgb(152, 37, 37) !important;
+}
+.fc-myCustomButton-button::before {
+  font-family: 'Material Symbols Outlined';
+  content:"folder";
+  padding-right:0.2rem;
 }
