--- a/monaco/monaco.css
+++ b/monaco/monaco.css
@@ -85,7 +85,7 @@ header input[type="radio"]:checked + label,.hoverButton:hover,#control-subArea i
     top:0;
     width: calc(50% + 0.5rem);
     display: grid;
-    grid-template-columns: 0.5rem 2rem 2rem 0.5rem 2rem 2rem 2rem 1fr 3rem;
+    grid-template-columns: 0.5rem 2rem 2rem 0.5rem 2rem 2rem 2rem 1fr 2rem 0.5rem 2rem;
     transition: 0.3s ease;
 }
 #control-subArea.close{
