--- a/monaco/monaco.css
+++ b/monaco/monaco.css
@@ -1,5 +1,6 @@
 :root {
-    --backgroundColor: #EFF5F5;
+    --backgroundColor: #2d2d2d;
+    --font-color: rgb(196, 229, 224);
     --headerHeight: 1.3rem;
 }
 
@@ -13,6 +14,8 @@ body {
     flex-wrap: nowrap;
     background-color: var(--backgroundColor);
     overflow: hidden;
+    color: var(--font-color);
+    transition: 0.3s;
 }
 
 #main {
@@ -36,12 +39,15 @@ header {
     position: relative;
     transition: 0.3s;
 }
+
 .monaco-area-sidebar-open {
-    width: calc(100% - max(25%, 20rem))!important;
+    width: calc(100% - max(25%, 20rem)) !important;
 }
+
 .monaco-area-tab-hidden {
-    height: 100%!important;
+    height: 100% !important;
 }
+
 #monaco-code,
 #monaco-diff {
     height: 100%;
@@ -49,13 +55,14 @@ header {
 }
 
 #monaco-tab {
- height: 1.5rem;
- display: flex;
- margin: 0;
- padding: 0;
- overflow-x: scroll;
- overflow-y: hidden;
+    height: 1.5rem;
+    display: flex;
+    margin: 0;
+    padding: 0;
+    overflow-x: scroll;
+    overflow-y: hidden;
 }
+
 .tab-libnameText {
     font-size: 0.6rem;
     display: inline-flex;
@@ -63,10 +70,12 @@ header {
     padding-left: 0.2rem;
     align-items: flex-end;
 }
+
 .tab-libnameArea {
     display: grid;
     grid-template-columns: auto 1fr;
 }
+
 .triangle-left {
     display: inline-block;
     border-style: solid;
@@ -75,22 +84,24 @@ header {
 }
 
 .displayHide {
-    display: none!important;
+    display: none !important;
 }
 
 .alignLine {
-    background-color: black;
+    background-color: var(--font-color);
     width: 0.15rem;
     height: 100%;
 
     margin: auto;
 }
+
 .verticalLine {
-    background-color: black;
+    background-color: var(--font-color);
     width: 100%;
     height: 0.15rem;
     margin: 0.2rem auto;
 }
+
 .refSize {
     height: var(--headerHeight);
 }
@@ -102,10 +113,10 @@ header {
 
 header input[type="radio"]:checked+label,
 .hoverButton:hover,
-#control-subArea input[type="checkbox"]:checked+label ,
-#right-sideBar input[type="radio"]:checked+label , 
+#control-subArea input[type="checkbox"]:checked+label,
+#right-sideBar input[type="radio"]:checked+label,
 #monaco-tab input[type="radio"]:checked+label {
-    background-color: rgba(0, 0, 0, 0.2)
+    background-color: rgba(255, 174, 0, 0.35)
 }
 
 .control-iconButton {
@@ -154,8 +165,9 @@ header input[type="radio"]:checked+label,
     transition: 0.3s;
     right: calc(-1 * max(25%, 20rem));
 }
+
 .r-side-open {
-    right: 0!important;
+    right: 0 !important;
 }
 
 #right-sideBar .sidebar-mode {
@@ -166,16 +178,19 @@ header input[type="radio"]:checked+label,
     padding: 0.4rem;
     border: 0.2rem;
 }
+
 #right-sideBar .sidebar-mode label {
     align-items: center;
     min-width: 5rem;
     margin: auto;
 }
+
 #right-sideBar-contents {
     height: calc(100% - 3.7rem);
     overflow-x: hidden;
     overflow-y: scroll;
 }
+
 #right-sideBar-contents .sidebar-contents {
     display: grid;
     grid-template-columns: 2rem 6rem 1fr;
@@ -183,25 +198,29 @@ header input[type="radio"]:checked+label,
     align-items: center;
     padding: 0.2rem;
     margin-top: 0.2rem;
-    border-left: 0.2rem solid black;
+    border-left: 0.2rem solid var(--font-color);
 }
+
 #right-sideBar-contents::-webkit-scrollbar {
     display: block;
 }
+
 #right-sideBar-contents::-webkit-scrollbar-thumb {
     background: #aeaeae;
     border-radius: 0.3rem;
 }
+
 #monaco-tab .tab-design {
     display: flex;
     justify-content: space-around;
     padding: 0 0.3rem;
     width: 10rem;
     height: 1.5rem;
-    border: 2px solid rgb(0, 0, 0);
+    border: 2px solid var(--font-color);
     overflow: hidden;
     word-wrap: normal;
 }
-#monaco-tab li {
+
+.tabLayout {
     display: block;
 }
