--- a/monaco/monaco.css
+++ b/monaco/monaco.css
@@ -33,7 +33,29 @@ header {
     user-select: none;
     position: relative;
 }
+#loadingPopUp {
+    top: 30%;
+    display: flex;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.7);
+}
 
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+  
+  .loader {
+    border: 0.5rem solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 0.5rem solid #3498db;
+    width: 2rem;
+    height: 2rem;
+    animation: spin 2s linear infinite;
+    margin-left: 0.5rem;
+  }
+
+  
 header .editorModeArea {
     display: grid;
     grid-template-columns: 3rem 3rem 1rem 2rem 1rem;
@@ -126,7 +148,8 @@ header input[type="radio"]:checked+label,
     background-color: rgba(255, 174, 0, 0.35)
 }
 .control-FolderFileArea input[type="checkbox"]:checked~select {
-    background-color: rgba(38, 135, 38, 0.35)
+    border: solid;
+    border-color: goldenrod;
 }
 
 .control-iconButton {
